tests/ui/test_unit_struct.stderr
error: Unit structs are not supported.
 --> $DIR/test_unit_struct.rs:4:1
  |
4 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^
